<resources>
    <string name="app_name">SignApp</string>
    <string name="Signin">Войти</string>
    <string name="Signup">Регистрация</string>
    <string name="avatar">Avatar</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="name">Имя Фамилия</string>
    <string name="email">E-Mail</string>
    <string name="Avatar2">Аватар</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="Done">Подтвердить</string>
</resources>