<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imAvatar1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/avatar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/bSignin"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/bSignin"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kuro" />

    <Button
        android:id="@+id/bSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Signup"
        app:layout_constraintEnd_toEndOf="@+id/bSignin"
        app:layout_constraintStart_toStartOf="@+id/bSignin"
        app:layout_constraintTop_toBottomOf="@+id/bSignin" />

    <TextView
        android:id="@+id/twInfo"
        android:layout_width="110dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imAvatar1"
        app:layout_constraintStart_toStartOf="@+id/imAvatar1"
        app:layout_constraintTop_toBottomOf="@+id/imAvatar1" />

</androidx.constraintlayout.widget.ConstraintLayout>